<resources>
    <string name="app_name">LastFM by ASEE</string>
    <string name="top_artists">Top Artists</string>
    <string name="favorites">Favorite Tracks</string>
    <string name="top_tracks">Top Tracks</string>
    <string name="search_artists">Search Artists</string>
    <string name="web_client_id">431163945128-a0k1197mcoenhrfpi0trfj9oagn6r70e.apps.googleusercontent.com</string>
    <string name="welcome_to">Welcome to</string>
    <string name="sign_in_with_google">Google Sign In</string>
    <string name="try_without_an_account">Try without an account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">Ok</string>
    <string name="please_insert_value">Insert nsert value</string>
    <string name="enter_valid_url">Enter valid url</string>
    <string name="youtube_url">Youtube url</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="favorites_title">Favorites</string>
    <string name="Artists">Artists</string>
    <string name="no_results_found">No results found</string>
    <string name="tracks">Tracks</string>
    <string name="albums">Albums</string>
    <string name="settings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="location">Location</string>
    <string name="rijeka">Rijeka</string>
    <string name="news">News</string>
    <string name="city_card">LastFM Site</string>
    <string name="enter_your_name">New username</string>
    <string name="dismiss">Dismiss</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="type_a_photo_title_ie">Type a photo title</string>
    <string name="photo_title">Photo title</string>
    <string name="paste_photo_url">Photo url</string>
    <string name="url">url</string>
    <string name="add_player_photo">Add artist photo</string>
    <string name="delete_all_photos">Delete all photos</string>
    <string name="editbutton">Edit button</string>
    <string name="manage_photos">Manage photos</string>
    <string name="error_deleting_image">Error deleting image</string>
    <string name="clear">Clear</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="not_implemented">Not impelmented</string>
    <string name="registiraj_se">Registiraj se</string>
    <string name="zapo_ni_kao_gost">Započni kao gost</string>
    <string name="novosti">Novosti</string>
    <string name="posljadnja_stranica">Posljadnja stranica</string>
    <string name="dobrodo_li">Dobrodošli</string>
</resources>