<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface_surface_0">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/favoritesToolbar"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/color_primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/favorites_title"
                android:theme="@style/HeadlineMediumOnColorLeft" />

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/tvArtistsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:text="@string/Artists"
            android:theme="@style/HeadlineSmallNLv2Left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/favoritesToolbar" />

        <com.example.aseefm.views.EmptyStateView
            android:id="@+id/artistsEmptyState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@id/tvArtistsTitle" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFavoriteArtists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@id/tvArtistsTitle" />

        <TextView
            android:id="@+id/tvTracksTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:text="@string/tracks"
            android:theme="@style/HeadlineSmallNLv2Left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvFavoriteArtists" />

        <com.example.aseefm.views.EmptyStateView
            android:id="@+id/tracksEmptyState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@id/tvTracksTitle" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFavoriteTracks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@id/tvTracksTitle" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>