<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:theme="@style/Theme.AseeFM">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawer_header"
        app:itemIconTint="@color/color_primary"
        app:itemTextColor="#333333"
        app:menu="@menu/drawer_body_menu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/surface_surface_0"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/color_primary"
            app:contentInsetStart="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.35"
                    android:gravity="center_vertical"
                    android:text="Last"
                    android:textAlignment="textEnd"
                    android:textAppearance="@style/HeadlineLargeNLv1Center"
                    android:textColor="@color/color_quaternary"
                    tools:ignore="RtlCompat" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.35"
                    android:gravity="center_vertical"
                    android:text="FM"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/HeadlineLargeNLv1Center"
                    android:textColor="@color/white"
                    tools:ignore="RtlCompat" />

                <ImageButton
                    android:id="@+id/ib_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.15"
                    android:background="@drawable/transparent_background"
                    android:contentDescription="@string/settings"
                    android:gravity="center_vertical"
                    android:scaleX="1.2"
                    android:scaleY="1.2"
                    android:src="@drawable/ic_settings" />

            </LinearLayout>
        </com.google.android.material.appbar.MaterialToolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="70dp">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="4dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:id="@+id/profile_details"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:paddingVertical="8dp">

                        <FrameLayout
                            android:layout_width="38dp"
                            android:layout_height="38dp"
                            android:layout_gravity="start|center_vertical"
                            android:layout_marginStart="16dp">

                            <com.google.android.material.card.MaterialCardView
                                android:id="@+id/profile_pic_wrapper"
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                app:cardCornerRadius="250dp">

                                <ImageView
                                    android:id="@+id/user_profile_pic"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:scaleType="centerCrop"
                                    android:src="@color/wave" />

                            </com.google.android.material.card.MaterialCardView>

                            <com.google.android.material.card.MaterialCardView
                                android:layout_width="15dp"
                                android:layout_height="15dp"
                                android:layout_gravity="top|end"
                                android:backgroundTint="@color/color_secondary"
                                app:cardCornerRadius="250dp">

                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:padding="3dp"
                                    android:scaleType="centerCrop"
                                    android:src="@drawable/ic_edit"
                                    app:tint="@color/white" />

                            </com.google.android.material.card.MaterialCardView>

                        </FrameLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="33dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="10dp"
                            android:orientation="vertical">

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/tv_Hello"
                                android:layout_width="wrap_content"
                                android:layout_height="33dp"
                                android:text="@string/dobrodo_li"
                                android:textColor="#26595B"
                                android:textAppearance="@style/HeadlineSmallNLv2Left" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/user_profile_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="@style/HeadlineMediumNLv1Left" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="15dp"
                            android:gravity="end"
                            android:orientation="vertical"/>
                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/news"
                        android:layout_width="170dp"
                        android:layout_height="160dp"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="4dp"
                        app:cardUseCompatPadding="true">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="12dp"
                            android:text="@string/novosti"
                            android:textColor="#26595B"
                            android:textAppearance="@style/HeadlineMediumNLv1Left" />

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/city_card"
                        android:layout_width="170dp"
                        android:layout_height="160dp"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="4dp"
                        app:cardUseCompatPadding="true">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="12dp"
                            android:textColor="#26595B"
                            android:text="@string/posljadnja_stranica"
                            android:textAppearance="@style/HeadlineMediumNLv1Left" />

                    </com.google.android.material.card.MaterialCardView>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginHorizontal="16dp"
                    android:layout_width="match_parent"
                    android:layout_marginTop="32dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>